[package]
name = "mofos"
version = "0.1.0"
authors = ["Ogier Bouvier <ars3nic@ars3nic.ch>"]
edition = "2018"

[dependencies]
# only needed for the client
fuse = { version = "0.3.1", optional = true }

libc = "0.2.42"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0.1"
log = "0.4.3"
env_logger = "0.5.10"
rust-crypto = "0.2.36"

[dev-dependencies]
mktemp = "0.3.1"

[features]
default = []
server = []
client = ["fuse"]

